tests/codegen/fail/interface/struct/derive_missing_field.stderr
error[E0080]: evaluation of constant value failed
  --> fail/interface/struct/derive_missing_field.rs:12:5
   |
12 |     id: String,
   |     ^^ the evaluated program panicked at 'Failed to implement interface `Character` on `ObjA`: Field `id` isn't implemented on `ObjA`.', $DIR/fail/interface/struct/derive_missing_field.rs:12:5
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: erroneous constant used
  --> fail/interface/struct/derive_missing_field.rs:12:5
   |
12 |     id: String,
   |     ^^ referenced constant has errors
   |
   = note: this error originates in the macro `$crate::assert_field_args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: erroneous constant used
  --> fail/interface/struct/derive_missing_field.rs:12:5
   |
12 |     id: String,
   |     ^^ referenced constant has errors
   |
   = note: this error originates in the macro `$crate::assert_field_args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
  --> fail/interface/struct/derive_missing_field.rs:12:5
   |
12 |     id: String,
   |     ^^ the evaluated program panicked at 'Failed to implement interface `Character` on `ObjA`: Field `id` isn't implemented on `ObjA`.', $DIR/fail/interface/struct/derive_missing_field.rs:12:5
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
  --> fail/interface/struct/derive_missing_field.rs:12:5
   |
12 |     id: String,
   |     ^^ the evaluated program panicked at 'Failed to implement interface `Character` on `ObjA`: Field `id` isn't implemented on `ObjA`.', $DIR/fail/interface/struct/derive_missing_field.rs:12:5
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: erroneous constant used
  --> fail/interface/struct/derive_missing_field.rs:12:5
   |
12 |     id: String,
   |     ^^ referenced constant has errors
   |
   = note: this error originates in the macro `$crate::assert_field_args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: erroneous constant used
  --> fail/interface/struct/derive_missing_field.rs:12:5
   |
12 |     id: String,
   |     ^^ referenced constant has errors
   |
   = note: this error originates in the macro `$crate::assert_field_args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
  --> fail/interface/struct/derive_missing_field.rs:12:5
   |
12 |     id: String,
   |     ^^ the evaluated program panicked at 'Failed to implement interface `Character` on `ObjA`: Field `id` isn't implemented on `ObjA`.', $DIR/fail/interface/struct/derive_missing_field.rs:12:5
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)
